Deserialize responses with invalid error code properly

--- a/src/System.Data.JsonRpc/Resources/Strings.resx
+++ b/src/System.Data.JsonRpc/Resources/Strings.resx
@@ -159,6 +159,9 @@
   <data name="core.deserialize.response.error.code.invalid_property" xml:space="preserve">
     <value>The response error does not have a valid code property</value>
   </data>
+  <data name="core.deserialize.response.error.code.invalid_range" xml:space="preserve">
+    <value>The response error code is invalid</value>
+  </data>
   <data name="core.deserialize.response.error.invalid_type" xml:space="preserve">
     <value>The response has the error property with invalid type</value>
   </data>
