--- a/src/System.Data.JsonRpc/Resources/Strings.resx
+++ b/src/System.Data.JsonRpc/Resources/Strings.resx
@@ -129,6 +129,9 @@
   <data name="core.deserialize.json_issue" xml:space="preserve">
     <value>An error occurred during deserialization from JSON</value>
   </data>
+  <data name="core.deserialize.message.id.large_number" xml:space="preserve">
+    <value>The value of the number identifier is too large</value>
+  </data>
   <data name="core.deserialize.request.id.invalid_property" xml:space="preserve">
     <value>The request has the invalid identifier property</value>
   </data>
@@ -158,6 +161,9 @@
   </data>
   <data name="core.deserialize.response.error.code.invalid_range" xml:space="preserve">
     <value>The response error code is invalid</value>
+  </data>
+  <data name="core.deserialize.response.error.code.large_number" xml:space="preserve">
+    <value>The value of the error code is too large</value>
   </data>
   <data name="core.deserialize.response.error.invalid_type" xml:space="preserve">
     <value>The response has the error property with invalid type</value>
